# oerperl

./: BUGREPORTING  CHANGELOG  CYGWIN  ChangeLog.oerperl  HELP  INSTALL  Makefile.in  README.md  SCRIPTING  THANKS  UPGRADING  config.h.in  configure  configure.in  ds.c  ds.h  misc.c  misc.h  mycrypt.c  network.c  network.h  oer-common.h  oer.c  oer.h  parse.c  parse.h  perl.c  pre_install.sh
sample-configuration/: oer.admins  oer.chaninfo  oer.channels  oer.conf  oer.ext  oer.kickreasons  oer.scripts  oer.services  oer.trusted
tools/: checklog.pl  checkoer.sh  fixlog.pl  logstrip.pl
